// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match the snapshot when the type is changeTheme 1`] = `
<DocumentFragment>
  <div
    class="fui-FluentProvider fui-FluentProvider_r_0_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      data-testid="test-ThemeChangeDialog"
    />
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the type is copyFile 1`] = `
<DocumentFragment>
  <div
    class="fui-FluentProvider fui-FluentProvider_r_1_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      data-testid="test-FileCopyDialog"
    />
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the type is copyLink 1`] = `
<DocumentFragment>
  <div
    class="fui-FluentProvider fui-FluentProvider_r_2_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      data-testid="test-LinkCopyDialog"
    />
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the type is createFile 1`] = `
<DocumentFragment>
  <div
    class="fui-FluentProvider fui-FluentProvider_r_3_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      data-testid="test-FileCreateDialog"
    />
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the type is createFolder 1`] = `
<DocumentFragment>
  <div
    class="fui-FluentProvider fui-FluentProvider_r_4_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      data-testid="test-FolderCreateDialog"
    />
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the type is deleteFile 1`] = `
<DocumentFragment>
  <div
    class="fui-FluentProvider fui-FluentProvider_r_5_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      data-testid="test-FileDeleteDialog"
    />
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the type is deleteFolder 1`] = `
<DocumentFragment>
  <div
    class="fui-FluentProvider fui-FluentProvider_r_6_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      data-testid="test-FolderDeleteDialog"
    />
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the type is overwriteFile 1`] = `
<DocumentFragment>
  <div
    class="fui-FluentProvider fui-FluentProvider_r_7_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      data-testid="test-FileOverwriteDialog"
    />
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the type is renameFile 1`] = `
<DocumentFragment>
  <div
    class="fui-FluentProvider fui-FluentProvider_r_8_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      data-testid="test-FileRenameDialog"
    />
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the type is renameFolder 1`] = `
<DocumentFragment>
  <div
    class="fui-FluentProvider fui-FluentProvider_r_a_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      data-testid="test-FolderRenameDialog"
    />
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the type is restoreFile 1`] = `
<DocumentFragment>
  <div
    class="fui-FluentProvider fui-FluentProvider_r_9_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      data-testid="test-FileRestoreDialog"
    />
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the type is undefined 1`] = `
<DocumentFragment>
  <div
    class="fui-FluentProvider fui-FluentProvider_r_b_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  />
</DocumentFragment>
`;
